force-app/main/default/objects/CostCategoryDetail__c/CostCategoryDetail__c.object-meta.xml
<CustomObject>
    <description>Details of this cost category</description>
    <label>Cost Category Detail</label>
    <nameField>
        <displayFormat>CCD-{0}</displayFormat>
        <label>Cost Category Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Category Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>