force-app/main/default/objects/CostCategoryDetail__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <formula>TEXT( Financial_Activity__r.Type_of_Activity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Type</label>
    <type>Text</type>
</CustomField>