force-app/main/default/objects/CostCategoryDetail__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget</label>
    <referenceTo>Budget</referenceTo>
    <relationshipLabel>Cost Category Details</relationshipLabel>
    <relationshipName>Cost_Category_Details</relationshipName>
    <type>Lookup</type>
</CustomField>