force-app/main/default/objects/CostCategoryDetail__c/fields/Budget_Available_Amount__c.field-meta.xml
<CustomField>
    <fullName>Budget_Available_Amount__c</fullName>
    <formula>Budget_Category_Detail__r.Available_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Available amount on this budget detail line item.  Not including any pending drawdown or expense reimbursements.</inlineHelpText>
    <label>Available Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>