force-app/main/default/objects/CostCategoryDetail__c/fields/Budget_Category_Detail__c.field-meta.xml
<CustomField>
    <fullName>Budget_Category_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget Category Detail</label>
    <referenceTo>BudgetCategoryValue</referenceTo>
    <relationshipLabel>Cost Category Details</relationshipLabel>
    <relationshipName>Cost_Category_Details</relationshipName>
    <type>Lookup</type>
</CustomField>