force-app/main/default/objects/CostCategoryDetail__c/fields/Budget_Planned_Amount__c.field-meta.xml
<CustomField>
    <fullName>Budget_Planned_Amount__c</fullName>
    <formula>Budget_Category_Detail__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>