force-app/main/default/objects/CostCategoryDetail__c/fields/BudgetDetailToAllocate__c.field-meta.xml
<CustomField>
    <fullName>BudgetDetailToAllocate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Search for the Budget Detail name in the popup and click the magnifying glass to search.  Or enter the ID (BCV-00000010) of the budget detail record to reallocate these funds into.  Only enter this on the line your taking the funds from.</inlineHelpText>
    <label>Budget Detail To Allocate</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Budget__c</field>
            <operation>equals</operation>
            <valueField>BudgetCategoryValue.Budget__r.Id</valueField>
        </filterItems>
        <filterItems>
            <field>BudgetCategoryValue.Id</field>
            <operation>notEqual</operation>
            <valueField>$Source.Budget_Category_Detail__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BudgetCategoryValue</referenceTo>
    <relationshipLabel>Cost Category Details (Budget Detail To Allocate)</relationshipLabel>
    <relationshipName>Cost_Category_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>