force-app/main/default/objects/CostCategoryDetail__c/fields/BudgetId__c.field-meta.xml
<CustomField>
    <fullName>BudgetId__c</fullName>
    <formula>Budget_Category_Detail__r.Budget__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BudgetId</label>
    <type>Text</type>
</CustomField>