force-app/main/default/objects/CostCategoryDetail__c/fields/Detail_Id__c.field-meta.xml
<CustomField>
    <fullName>Detail_Id__c</fullName>
    <formula>Budget_Category_Detail__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the id of the Budget Detail record.  Select one of these id&apos;s when doing reallocations from one budget detail to another.</inlineHelpText>
    <label>Detail Id</label>
    <type>Text</type>
</CustomField>