force-app/main/default/objects/CostCategoryDetail__c/fields/DetailName__c.field-meta.xml
<CustomField>
    <fullName>DetailName__c</fullName>
    <label>Detail Name</label>
    <length>65</length>
    <type>Text</type>
</CustomField>