force-app/main/default/objects/CostCategoryDetail__c/fields/FA_Status__c.field-meta.xml
<CustomField>
    <fullName>FA_Status__c</fullName>
    <formula>TEXT(Financial_Activity__r.Status )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FA Status</label>
    <type>Text</type>
</CustomField>