force-app/main/default/objects/CostCategoryDetail__c/fields/Financial_Activity__c.field-meta.xml
<CustomField>
    <fullName>Financial_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Activity</label>
    <referenceTo>FundingDisbursement</referenceTo>
    <relationshipLabel>Cost Category Details</relationshipLabel>
    <relationshipName>Cost_Category_Details</relationshipName>
    <type>Lookup</type>
</CustomField>