force-app/main/default/objects/CostCategoryDetail__c/fields/FinancialActivityCostCategory__c.field-meta.xml
<CustomField>
    <fullName>FinancialActivityCostCategory__c</fullName>
    <label>Financial Activity Cost Category</label>
    <referenceTo>Financial_Activity_Cost_Category__c</referenceTo>
    <relationshipLabel>Cost Category Details</relationshipLabel>
    <relationshipName>Cost_Category_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>