force-app/main/default/objects/CostCategoryDetail__c/fields/InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNumber__c</fullName>
    <label>Invoice Number</label>
    <length>65</length>
    <type>Text</type>
</CustomField>