force-app/main/default/objects/CostCategoryDetail__c/fields/Item_Sub_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Sub_Description__c</fullName>
    <formula>Budget_Category_Detail__r.Item_Sub_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Sub Description</label>
    <type>Text</type>
</CustomField>