force-app/main/default/objects/CostCategoryDetail__c/fields/Lookup_Key__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Key__c</fullName>
    <formula>Budget_Category_Detail__r.Lookup_Key__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lookup Key</label>
    <type>Text</type>
</CustomField>