force-app/main/default/objects/CostCategoryDetail__c/fields/Payee_s_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Payee_s_Supplier__c</fullName>
    <label>Payee&apos;s Supplier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>