force-app/main/default/objects/CostCategoryDetail__c/fields/PO__c.field-meta.xml
<CustomField>
    <fullName>PO__c</fullName>
    <inlineHelpText>Purchase Order Number</inlineHelpText>
    <label>PO#</label>
    <length>65</length>
    <type>Text</type>
</CustomField>