force-app/main/default/objects/CostCategoryDetail__c/fields/Reallocation__c.field-meta.xml
<CustomField>
    <fullName>Reallocation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>check is this is a reallocation of funds from one detail line to another</inlineHelpText>
    <label>Reallocation</label>
    <type>Checkbox</type>
</CustomField>